common: Fix possible crash with blank disks

Never call bd_open() with an empty path.

https://bugzilla.gnome.org/show_bug.cgi?id=749093